tests/ui/unop/unop-neg-bool.rs
fn main() {
    -{ true }; //~ ERROR cannot apply unary operator `-` to type `bool`
    -true; //~ ERROR cannot negate `boolean` literal
}
